--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@ JWT_SECRET_KEY=506c616e74207472656573
 # XENDIT_TOKEN=XXXXXXXXXXXXXXXXXXXX
 # XENDIT_CALLBACK_TOKEN=XXXXXXXXXXXX
 GIN_MODE=debug
+SESSION_KEY=h9Jp3KqX2R7sLwV
